--- a/client/templates/views/logs.pug
+++ b/client/templates/views/logs.pug
@@ -9,6 +9,8 @@ html(lang="en")
   meta(http-equiv="Cache" content="no-cache") 
   head
     title 咖速修
+    script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/vant@2.8/lib/vant.min.js")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.8/lib/index.css")
   body
     .container#app
