--- a/wxclient/templates/views/index.pug
+++ b/wxclient/templates/views/index.pug
@@ -33,8 +33,8 @@ html(lang="en")
           van-cell(title="需求名称" :value="workList.demandChargeName")
           van-cell(title="报修类型名称" :value="workList.repairsTypeName")
           van-cell(title="产品名称" :value="workList.facilityName")
-          van-cell(title="故障描述" :value="workList.faultContent")
-          van-cell
+          van-cell(title="备注" :value="workList.faultContent")
+          van-cell(v-if="workList.video != '无'")
             template(#title)
               span(class="custom-title" style="font-weight: blod;") 视频附件
               video(:src="workList.video" controls="controls" width="200" height="200" style="display: block;")
@@ -63,7 +63,7 @@ html(lang="en")
             template(#title)
               div(style="width: 4px;background: red;height: 100%;float: left;margin-right: 6px")
               span(class="custom-title" style="font-weight: blod;") 订单信息
-          van-cell(:value="workList.parentId" v-if="workList.parentId != -1")
+          van-cell(:value="workList.parentId" v-if="workList.parentId != '无'")
             template(#title)
               span(class="custom-title") 父级工单号
               van-tag(mark type="success") 二
