--- a/src/views/index.html
+++ b/src/views/index.html
@@ -58,7 +58,7 @@
                                 @click="menuauto('right')"></i>
                         </div>
                     </transition>
-                    <iframe id="tagHref" scrolling="no" sandbox="allow-scripts allow-same-origin allow-top-navigation"
+                    <iframe id="tagHref" scrolling="no" sandbox="allow-scripts allow-same-origin allow-top-navigation allow-downloads"
                         style="border:none;width: 100%;height: 100%;" src="../index.htm?hash:ix"
                         frameborder="0"></iframe>
                 </section>
