--- a/wxclient/templates/stylesheets/style.scss
+++ b/wxclient/templates/stylesheets/style.scss
@@ -52,6 +52,7 @@ body{
         padding: 10px;
         box-sizing: border-box;
         box-shadow: 0 0 10px rgba(0,0,0, 0.22);
+        z-index: 3;
         button{
             margin: 0 auto;
             width: $width - 10%;
