--- a/client/templates/views/logs.pug
+++ b/client/templates/views/logs.pug
@@ -26,5 +26,6 @@ html(lang="en")
             h3 {{ (item.logType == 1 ? "确认登记：": item.logType == 1 ? "确认登记：": item.logType == 2 ? "联络登记：": item.logType == 3 ? "派单登记：": item.logType == 4 ? "回访登记：": item.logType == 5 ? "继续联络：": item.logType == 17 ? "编辑登记：": item.logType == 18 ? "提交登记：": "取消登记：") + item.createName }}
             p {{ item.logContent }}
             p {{ item.createTime }}
+        van-button(id="goBack") 返回
           
           
