--- a/client/templates/views/details.pug
+++ b/client/templates/views/details.pug
@@ -59,6 +59,8 @@ html(lang="en")
               span(class="custom-title" style="font-weight: blod;") 师傅信息
           van-cell(title="维修师傅" :value="workList.maintainerName")
           van-cell(title="维修师傅电话" :value="workList.maintainerPhone")
+          div(v-if="workList.status == '已派单'" style="text-align: center;")
+            van-button(type="info" plain style="width: 20%; margin: 10px auto; font-size: 12px;background: none; border-color: #1989fa;" @click="goToChat") 在线沟通
           
           van-cell(class="cell_border")
             template(#title)
