--- a/src/views/master.html
+++ b/src/views/master.html
@@ -31,8 +31,8 @@
                         <el-input placeholder="请输入内容" v-model="listSearch._value_" class="_searchVal">
                             <el-select v-model="listSearch._name_" class="_searchVal_select" slot="prepend"
                                 placeholder="请选择">
-                                <el-option label="师傅名称" value="maintainerName"></el-option>
-                                <el-option label="手机号" value="maintainerPhone"></el-option>
+                                <el-option label="师傅名称" value="adminName"></el-option>
+                                <el-option label="手机号" value="phone"></el-option>
                             </el-select>
                         </el-input>
 <!-- 
@@ -54,8 +54,13 @@
                     </el-form>
                     <template>
                         <el-table :data="tableData" stripe style="width: 100%" border>
-                            <el-table-column prop="maintainerName" label="师傅名称"></el-table-column>
-                            <el-table-column prop="maintainerPhone" label="师傅电话"></el-table-column>
+                            <el-table-column prop="adminName" label="师傅名称"></el-table-column>
+                            <el-table-column prop="phone" label="师傅电话"></el-table-column>
+                            <el-table-column prop="province" label="区域">
+                                <template slot-scope="scope">
+                                    {{ scope.row.province != -1 ? scope.row.province + scope.row.city : '无' }}
+                                </template>
+                            </el-table-column>
                             <el-table-column prop="status" label="状态">
                                 <template slot-scope="scope">
                                     <div :class="scope.row.status == 1 ? 'green' : 'red'">
@@ -70,7 +75,7 @@
                                         详情
                                     </el-button>
                                     <el-button type="text" size="small"
-                                    @click="deletedata({URL: 'delete_maintainer', TAG: 'maintainerId', NUMBER: scope.row.id })">
+                                    @click="deletedata({URL: 'delete_maintainer', TAG: 'adminId', NUMBER: scope.row.id })">
                                         删除
                                     </el-button>
                                 </template>
@@ -85,11 +90,27 @@
 
                     <el-dialog title="维修师傅" :visible.sync="SearchTableAndVisible" width="50%">
                         <el-form :data="SearchTableFormData" label-width="160px">
-                            <el-form-item label="姓名" prop="maintainerName  ">
-                                <el-input v-model="SearchTableFormData.maintainerName  "></el-input>
+                            <el-form-item label="账号" prop="account">
+                                <el-input v-model="SearchTableFormData.account"></el-input>
                             </el-form-item>
-                            <el-form-item label="手机号码" prop="maintainerPhone ">
-                                <el-input v-model="SearchTableFormData.maintainerPhone "></el-input>
+                            <el-form-item label="密码" prop="password">
+                                <div style="color: #ccc;">需要输入对应的密码进行修改</div>
+                                <el-input v-model="SearchTableFormData.password" type="password"></el-input>
+                            </el-form-item>
+                            <el-form-item label="等级" prop="grade">
+                                <el-input v-model="SearchTableFormData.grade"></el-input>
+                            </el-form-item>
+                            <el-form-item label="姓名" prop="adminName">
+                                <el-input v-model="SearchTableFormData.adminName"></el-input>
+                            </el-form-item>
+                            <el-form-item label="手机号码" prop="phone">
+                                <el-input v-model="SearchTableFormData.phone"></el-input>
+                            </el-form-item>
+                            <el-form-item label="省" prop="province">
+                                <el-input v-model="SearchTableFormData.province"></el-input>
+                            </el-form-item>
+                            <el-form-item label="市" prop="city">
+                                <el-input v-model="SearchTableFormData.city"></el-input>
                             </el-form-item>
                             <el-form-item label="状态" prop="status ">
                                 <el-radio-group v-model="SearchTableFormData.status ">
