--- a/src/views/order.html
+++ b/src/views/order.html
@@ -382,8 +382,8 @@
                             <el-button style="margin-top: 10px;" v-show="formData.orderCount > 0" type="primary"
                                 @click="option = []; order(formData)"> 查看订单
                             </el-button>
-                            <el-button style="margin-top: 10px;" type="primary" @click="pageFn(formData.workId)"> 在线沟通
-                            </el-button>
+                            <!-- <el-button style="margin-top: 10px;" type="primary" @click="pageFn(formData.workId)"> 在线沟通
+                            </el-button> -->
                         </div>
                     </el-form>
                 </el-dialog>
@@ -398,8 +398,8 @@
                                     <el-radio v-model="tableRadio" :label="scope.row"><i></i></el-radio>
                                 </template>
                             </el-table-column>
-                            <el-table-column prop="maintainerName" label="师傅名称"></el-table-column>
-                            <el-table-column prop="maintainerPhone" label="师傅联系电话"></el-table-column>
+                            <el-table-column prop="adminName" label="师傅名称"></el-table-column>
+                            <el-table-column prop="phone" label="师傅联系电话"></el-table-column>
                         </el-table>
                         <div class="btn-center" style="text-align: center; margin: 20px;">
                             <el-button type="primary" @click="goorder({work: SearchTableFormData.workId})">派送
