--- a/src/views/master.html
+++ b/src/views/master.html
@@ -75,7 +75,7 @@
                                         详情
                                     </el-button>
                                     <el-button type="text" size="small"
-                                    @click="deletedata({URL: 'delete_maintainer', TAG: 'adminId', NUMBER: scope.row.id })">
+                                    @click="deletedata({URL: 'delete_maintainer', TAG: 'maintainerId', NUMBER: scope.row.id })">
                                         删除
                                     </el-button>
                                 </template>
