--- a/client/templates/views/details.pug
+++ b/client/templates/views/details.pug
@@ -27,7 +27,7 @@ html(lang="en")
             template(#title)
               div(style="width: 4px;background: red;height: 100%;float: left;margin-right: 6px")
               span(class="custom-title" style="font-weight: blod;") 需求信息
-              span(style="float: right; cursor: pointer; color: blue" @click="dobient(); contentMsg = true" v-if="workList.status != '已完成' && workList.status != '已取消'") 修改报修类型
+              van-tag(type="success" style="float: right; cursor: pointer; color: #FFF" @click="dobient(); contentMsg = true" v-if="workList.hasBeenModified != 1") 修改报修类型
           van-cell(title="需求名称" :value="workList.demandChargeName")
           van-cell(title="报修类型名称" :value="workList.repairsTypeName")
           van-cell(title="产品名称" :value="workList.facilityName")
@@ -83,7 +83,7 @@ html(lang="en")
           div(style="width: 100%;margin-bottom: 20px;height: auto;overflow: hidden;")
             van-button(round type="info" class="btn" @click="href('order')" style="width: 40%; float: left;") 返回上一页
             van-button(round type="info" class="btn" @click="href('logs')" style="width: 40%; float: left;") 查看日志
-          van-popup(v-model="contentMsg" position="bottom" :style="{ height: '40%' }")
+          van-popup(v-model="contentMsg" position="bottom")
             van-tree-select(:items="items" :active-id.sync="activeId" :main-active-index.sync="activeIndex" @click-item="onSelectDetails")
           
           
